<?xml version="1.0"?>
<package format="2">
  <name>bag2txt</name>
  <version>0.0.0</version>
  <description>The bag2txt package for converting event rosbag into txt file</description>
  <maintainer email="yunfan.yang.1@campus.tu-berlin.de">yunfan</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  


  <export>
  </export>
</package>
